<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DifficultySelectActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/difficulty_select_header"
              android:textSize="40dp"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_button_text"
            android:id="@+id/easyButton"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_button_text"
            android:id="@+id/mediumButton"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_button_text"
            android:id="@+id/hardButton"
    />

</LinearLayout>